tests/res/control_flow/error_if_not_expression.say
// `if` is a statement, not an expression: it cannot appear in value position.
say x = if true { 1 } else { 2 }; // error: Unexpected token if
